    * ``pdcurses.dll``: Split into ``pdcurses32.dll`` and ``pdcurses64.dll``.
    * ``sqlite3.dll``: Split into ``sqlite3_32.dll`` and ``sqlite3_64.dll``.
    * ``ssleay32.dll``: Split into ``ssleay32.dll`` and ``ssleay64.dll``.
    * ``libeay32.dll``: Split into ``libeay32.dll`` and ``libeay64.dll``.

    Compile with ``-d:nimOldDLLs`` to make the stdlib use the old DLL names.


  Library additions
  -----------------

  - The nre module has been added, providing a better interface to PCRE than re.
  - The ``expandSymlink`` proc has been added to the ``os`` module.
  - The ``tailDir`` proc has been added to the ``os`` module.
  - Define ``nimPinToCpu`` to make the ``threadpool`` use explicit thread
    affinities. This can speed up or slow down the thread pool; it's up to you
    to benchmark it.
  - ``strutils.formatFloat`` and ``formatBiggestFloat`` do not depend on the C
    locale anymore and now take an optional ``decimalSep = '.'`` parameter.


  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.
  - Added ``macros.getImpl`` that can be used to access the implementation of
    a routine or a constant. This allows for example for user-defined inlining
    of function calls.
  - Tuple unpacking finally works in a non-var/let context: ``(x, y) == f()``
    is allowed. Note that this doesn't declare ``x`` and ``y`` variables, for
    this ``let (x, y) == f()`` still needs to be used.
  - ``when nimvm`` can now be used for compiletime versions of some code
    sections. See (XXX) for details.


  Bugfixes
  --------


2015-05-04 Version 0.11.2 released
==================================

This is just a bugfix release that fixes the most pressing regressions we